# WebCrawler

./: .gitignore  CMakeLists.txt  db.sql  doxyfile.dxg  dump_database_structure.bat  registrate_crawler_id.sql  vs2015_build_solution_win32.bat  vs2015_build_solution_x64.bat  webcrawler.sln
terminal/: CMakeLists.txt
terminal/include/: stdafx.h
terminal/src/: main.cpp
webcrawler/: Configuration.cs  CrawlerRegistrator.cs  EntryPoint.cs  Helpers.cs  Program.cs  webcrawler.csproj
webcrawler/Properties/: launchSettings.json
webcrawler/database/: ConnectionFactory.cs  IDbConnection.cs  ISqlTransaction.cs  MySqlDbConnection.cs  MySqlTransaction.cs
webcrawler/loader/: CommandWatcher.cs  ConnectionFactory.cs  DataProvider.cs  Loader.cs
